          - add IKDDCupRecommender interface for recommenders that use the
            KDDCup item data
        - recommenders
          - make ItemRecommender and RatingPredictor clonable
          - BPRMF:
            - get rid of unnecessary IterationLength parameter
            - only interate once over relevant data points in online learning
            - explicitly model item bias
            - significant speed up of learning
          - Random: remove unnecessary methods
          - Zero: new item recommender that always predicts the score 0
          - rename MyMediaLite.ensemble namespace to MyMediaLite.Ensemble
          - make matrix factorization recommender faster by using
            MatrixUtils.RowScalarProduct
        - command-line tools
          - move DisplayDataStats() for item recommendation from the program
            to the library
          - improved usage information
        - evaluation
          - add relevant_users feature for item prediction
        - data types
          - fix incorrect error message in Matrix class (reported by
            Chris Newell)

1.0	2011-03-19
	- recommenders
          - BPRMF: bug fix in item bias handling (reported by Christian Brauch)
          - UserItemBaseline: use internal splitting to find good regularization
                              parameters
        - API changes
          - new data structures and interfaces for rating prediction and for
            item prediction from implicit feedback (consume less memory)
          - CanPredict() is now part of the IRecommender interface.
          - rename IO.RatingPredictionData to IO.RatingPrediction
          - rename IO.ItemRecommenderData to IO.ItemRecommendation
          - add rating data structures with time stamps: RatingsWithDateTime
            and StaticRatingsWithDateTime
        - command-line programs
          - add command-line program for KDD Cup 2011
          - rating prediction now lets the user specify to store the ratings